# simple-sentry

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  send.sh  tmp.exs
.github/workflows/: docker-publish.yml
.sqlx/: query-61240879b7b1a5c4fddcad486fd98590d37441cf6a02d77869f8c2abbcf6f3ee.json  query-6d8033a1d2f1b4fdd25f7f7567e52172f2da5c199dd59ce64727c7ce98082179.json  query-6ee8d4bde6d85577fce44cb1a37f9c73ed9b0e62f2958e1069560d8021299ca6.json  query-7ccb547517648c5a95f35fcc92a036b384e8904570d17b50c0948754680aaa8d.json  query-81f7fca8543a4fb9d46b8e80a5caa6693b9c26e19491472c7d0c99ac81a18a13.json  query-9a016fcbcf0e1c957e136c80447555a56f753359e84f0cd4792c691d66ce46e7.json  query-d1f793c1fb848ddd8c87fc04cf5745212d1d6a507505dd42c4fdf28080bc4d7a.json
data/: .gitignore  mock.db
migrations/: 20240505101532_init.sql  20240509194039_add_project_table.sql
sql/: get_sentry_log.sql  insert_project.sql  insert_sentry_log.sql  list_projects.sql  list_sentry_log.sql  list_sentry_log_project_filter.sql  update_project.sql
src/: main.rs  templates.rs  time.rs  ui.rs
templates/: base.html  data.html  data_content.html  data_contents.html  home.html  project_edit.html  projects.html
