[package]
name = "simple-sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2", "json", "tokio"] }
axum-extra = { version = "0.9.3", features = ["json-lines"] }
axum-route-error = "5.0.1"
futures-util = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
