[package]
name = "simple-sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["http2", "json", "tokio", "form"] }
axum-extra = { version = "0.9.3", features = ["json-lines"] }
axum-htmx = "0.5.0"
axum-route-error = "5.0.1"
futures-util = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_path_to_error = "0.1.16"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros", "time", "json", "uuid"] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
